src/pages/Home/SlippersSwiper/SlipperImageSwiper/SlipperImageSwiper.module.css
.SlipperSwiper {
    overflow: visible;
    min-height: 380px;
    margin-bottom:  90px;
}
.SlipperBigImageSlideContainer {
    position: relative;
    height: 380px;
}
.SlipperBigImage {
    display: block;
    max-width: 600px;
    position: absolute;
    top: -40px;
    right: 5%;
    pointer-events: none;
}
.Loading {
    top: 50% !important;
    left: 50% !important;
    right: auto !important;
    transform: translate(-50%, -50%);
}
@media(max-width:1024px) {
    .SlipperBigImage{
        max-width: 444px;
        top: -260px;
        left: 0;
        right: 0;
        margin: auto;
    }
    .SlipperSwiper {
        margin-top: 200px;
    }
}
@media(max-width:500px) {
    .SlipperBigImage{
        max-width: 350px;
        top: -200px;

    }
}

